--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     	A.style.background='#39c81f';
     let utterance = new SpeechSynthesisUtterance();
     	utterance.text = "A. A for. apple";
-            
+        Core.speak("A for apple");
     	window.speechSynthesis.speak(utterance);
             
     	utterance.onend=function(){
