--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@
     	})
     	Z.addEventListener("click", function(){
             Core.speak("A for apple");
-    	
+    	const utterance = new SpeechSynthesisUtterance();
+    	utterance.text = "Y";
+    	window.speechSynthesis.speak(utterance);
     	})
         Core.speak("A for apple");
     </script>
