--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
     	utterance.onend=function(){
     	Y.style.background='#fff';
     	}
+            Core.speak("A for apple");
     	})
     	Z.addEventListener("click", function(){
             Core.speak("A for apple");
