--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             Core.speak("A for apple");
     	})
     	Z.addEventListener("click", function(){
-            
+            Z.style.background='#39c81f';
     	const utterance = new SpeechSynthesisUtterance();
     	utterance.text = "Y";
     	window.speechSynthesis.speak(utterance);
