--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     	window.speechSynthesis.speak(utterance);
             Core.speak("A for apple");
             utterance.onend=function(){
-    	X.style.background='#39c81f';
+        Z.style.background='#39c81f';
                 }
     	})
         Core.speak("A for apple");
